skins/contrib/Sabayon/global.css
/* The contents of this file are subject to the Mozilla Public
  * License Version 1.1 (the "License"); you may not use this file
  * except in compliance with the License. You may obtain a copy of
  * the License at http://www.mozilla.org/MPL/
  *
  * Software distributed under the License is distributed on an "AS
  * IS" basis, WITHOUT WARRANTY OF ANY KIND, either express or
  * implied. See the License for the specific language governing
  * rights and limitations under the License.
  *
  * The Original Code is the Bugzilla Bug Tracking System.
  *
  * The Initial Developer of the Original Code is Netscape Communications
  * Corporation. Portions created by Netscape are
  * Copyright (C) 1998 Netscape Communications Corporation. All
  * Rights Reserved.
  *
  * Contributor(s): Byron Jones <bugzilla@glob.com.au>
  *                 Christian Reis <kiko@async.com.br>
  *                 Vitaly Harisov <vitaly@rathedg.com>
  *                 Svetlana Harisova <light@rathedg.com>
  *                 Marc Schumann <wurblzap@gmail.com>
  *                 Pascal Held <paheld@gmail.com>
  */

/* global (begin) */
    /* monospace is much smaller than Verdana by default, so we make it a bit bigger. */
    pre, code, kbd {
        font-size: medium;
    }
/* global (end) */

/* header (begin) */
	h1.title {
		font-size: 2em;
		color: white;
		margin: 1em 0pt;
	}

    .lang_current {
        font-weight: bold;
    }

    #message {
        border: 1px solid red;
        margin: 0.3em 0em;
        padding: 0.3em;
        color: green;
    }

    form.mini_login input.bz_login  {
        width: 10em;
    }
    form.mini_login input.bz_password {
        width: 6em;
    }
    form.mini_login input.bz_remember {
        margin: 0;
    }
    .bz_mini_login_help {
        color: #777;
    }

/* header (end)   */

/* banner (begin) */
    #banner {
    }

/* banner (end) */

/* link lists (begin) */
    ul.links {
        margin: 0;
        padding: 0;
        list-style-type: none;
		float: left;
		line-height: 4em;
    }

    ul.links li {
        display: inline;
        white-space: nowrap;
    }

    ul.links li a,
	ul.links li a:active,
	ul.links li a:link,
	ul.links li a:visited {
		color: #EEE;
		text-decoration: none;
	}

	ul.links li a:hover {
		text-decoration: underline;
	}

/* link lists (end) */

/* searchbox (begin)   */
	#searchbox {
		float: right;
		line-height: 4em;
	}

	#searchbox input #quicksearch_top {
		border: 1px solid #666;
		background-color: #222;
		height: 19px;
		color: #FFF;
		padding: 1px 0 0 0;
	}
	
	#searchbox input #find_top {
		border: 1px solid #666;
		background-color: #222;
		height: 20px;
		color: #FFF;
		padding: 0;
	}
/* searchbox (end) */

/* tabs (begin) */
    .tabs td {
        background: #eee;
        text-align: center;
        border-style: solid;
        border-color: black;
        border-width: 0px 0px 2px 0px;
    }
        
    .tabs td.selected {
        background: white;
        border-width: 2px 2px 0px 2px;
    }

    .tabs td.spacer {
        background: white;
    }
/* tabs (end) */

/* Links that control whether or not something is visible. */
a.controller {
    font-size: 115%;
}

div#docslinks {
    float: right;
    border: 1px solid black;
    padding: 1ex;
    font-size: 80%;
}

#docslinks h2 {
    margin: 0;
}

.bz_obsolete {
    text-decoration: line-through;
}
.bz_inactive {
    text-decoration: line-through;
}
.bz_closed,
.bz_CLOSED td {
    text-decoration: line-through;
}
.bz_private {
    color: darkred;
    background: #f3eeee;
}
.bz_disabled {
    color: #a0a0a0;
}

/************/
/* Comments */
/************/

.bz_comment_table td {
    vertical-align: top;
}

.bz_comment {
    margin-bottom: 2em;
}

/* The rules for these classes make international text wrap correctly,
   even for languages like Japanese that have no spaces. */
.bz_comment_text, .uneditable_textarea {
     font-family: monospace;
    /* Note that these must all be on separate lines or they stop
       working in Konqueror. */
     white-space: pre-wrap;      /* CSS 3 & 2.1 */
     white-space: -moz-pre-wrap; /* Gecko */
     white-space: -pre-wrap;     /* Opera 4-6 */
     white-space: -o-pre-wrap;   /* Opera 7 */
}

.bz_comment_text {
     width: 50em;
}

.bz_comment_user, .bz_comment_time, .bz_comment_number, 
.bz_private_checkbox, .bz_comment_actions
{
    margin: 0 .5em;
}

.bz_comment_actions, .bz_comment_number, .bz_private_checkbox {
    float: right;
}

.bz_collapse_expand_comments {
    padding: 0;
    margin: 0 0 0 1em;
    list-style-type: none;
}
.bz_collapse_expand_comments li {
    margin-bottom: .5em;
}
.bz_collapse_comment {
    text-decoration: none;
}

.bz_private_checkbox input { 
    margin: 0;
    vertical-align: middle;
}

.bz_comment_head, .bz_first_comment_head {
    padding-top: .1em;
    padding-bottom: .1em;
    padding-left: .5em;
    background-color: #e0e0e0;
}

.bz_comment_user_images img {
    vertical-align: bottom;
}

.bz_comment_hilite pre {
    background-color: lightgreen;
    margin: 0;
    padding: 1em 0;
}

/** End Comments **/

.bz_default_hidden, .bz_tui_hidden, .bz_hidden_field, .bz_hidden_option {
    /* We have !important because we want elements with these classes to always
     * be hidden, even if there is some CSS that overrides it (we use these
     * classes inside JavaScript to hide things). */
    display: none !important;
}

span.quote {
    color: #65379c;
    /* Make quoted text not wrap. */
    white-space: pre;
}

table#flags th,
table#flags td {
    vertical-align: middle;
    text-align: left;
}

.flag_select {
    min-width: 3em;
}

input.requestee {
    width: 15em;
}

#error_msg {
    font-size: x-large;
}

.throw_error {
    background-color: #ff0000;
    color: black;
    font-size: 120%;
    margin: 1em;
    padding: 0.5em 1em;
}

dt {
    font-weight: bold;
}
body > dl > dt {
    border-top: dotted gray thin;
}
dl dl > dt {
    border-top: none;
}

#admin_table th {
    white-space: normal !important;
}

/* Style of the attachment table and time tracking table */
#attachment_table {
    border-collapse: collapse;
    border: 1px solid #333333;
}

#attachment_table th, .bz_attach_footer, .bz_time_tracking_table th {
    background-color: #E0E0E0;
    color: black;
}

#attachment_table td, .bz_time_tracking_table th, .bz_time_tracking_table td {
    border: 1px solid #333333;
}

.bz_attach_extra_info {
    font-size: smaller;
}

.bz_attach_flags, .bz_attach_footer {
    white-space: nowrap;
}

.bz_attach_view_hide {
    float: right;
    padding-left: 1em;
}

/* For bug fields */
.uneditable_textarea {
    width: 30em;
    font-size: medium;
}

div.user_match {
    margin-bottom: 1em;
}

.box {
    border: 1px solid black;
    color: black;
    background-color: #ffc;
    margin: 1em;
    padding: 0.5em 1em;
}

.collapsed {
    display: none;
}

/* Rules specific for printing */
@media print {
    #header, #footer {
        display: none;
    }

    body {
        background-image: none;
        background-color: #fff;
    }
}

.field_label {
    text-align: right;
    vertical-align: top;
    font-weight: bold;
}
.field_value, form#Create th, form#Create td {
    vertical-align: top;
}
th.required:before {
    content: "* ";
}
th.required:before, span.required_star {
    color: red;
}
input.required, select.required, span.required_explanation {
    background-color: #fff7cd;
}

.calendar_button {
    background: transparent url("global/calendar.png") no-repeat;
    width: 20px;
    height: 20px;
    vertical-align: middle;
}
.calendar_button span { display: none }
/* These classes are set by YUI. */
.yui-calcontainer {
    display: none; 
    background-color: white; 
    padding: 10px;
    border: 1px solid #404D6C;
}

.bug_urls {
    margin: 0 0 1em 0;
    padding: 0;
    list-style-type: none;
}

form#Create th {
    text-align: right;
}

form#Create .comment {
    vertical-align: top;
    overflow: auto;
    color: green;
    margin: 0 0.5em;
    padding: 0.3em;
    height: 8ex;
}

.image_button {
    background-repeat: no-repeat;
    background-position: center center;
    width: 30px;
    height: 20px;
}

#select_button {
    background-image: url(global/right.png);
}

#deselect_button {
    background-image: url(global/left.png);
}

#up_button {
    background-image: url(global/up.png);
}

#down_button {
    background-image: url(global/down.png);
}

